--- a/src/app/ieo/ieo.component.html
+++ b/src/app/ieo/ieo.component.html
@@ -1,5 +1,9 @@
 <div class="ieo-container">
 
+  <div class="ieo-header">
+    <app-ieo-header></app-ieo-header>
+  </div>
+
 	<!-- start component -->
 	<div class="first-screen" style="background-image: url(assets/img/ieo/bg.png);">
 		<div class="fs-wr">
