--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -72,3 +72,4 @@
 @import "pages/ieo/_economic.scss";
 @import "pages/ieo/_buy-popup.scss";
 @import "pages/ieo/_popup-notification.scss";
+@import "pages/ieo/_ieo-header.scss";
