--- a/src/app/ieo/ieo.component.scss
+++ b/src/app/ieo/ieo.component.scss
@@ -1,5 +1,6 @@
 .ieo-header {
-  height: 50px;
-  width: 100%;
-  background: orange;
+  // height: 50px;
+  // width: 100%;
+  // background: orange;
+  display: none;
 }
