--- a/src/app/ieo/components/ieo-descriptions/ieo-descriptions.component.html
+++ b/src/app/ieo/components/ieo-descriptions/ieo-descriptions.component.html
@@ -14,6 +14,103 @@
       </ul>
     </div>
 
+    <div class="rating">
+      <div class="rating-title">
+        <h4>Rating for Bittorent</h4>
+      </div>
+      <div class="rating-item-wr">
+        <div class="rating-item">
+          <div class="rating-item-inner">
+            <div class="logo-rating">
+              <img src="assets/img/ieo/icomarks.svg" alt="">
+            </div>
+            <div class="rating-text">
+              <div class="rating-title-item">
+                <span>Rating</span>
+              </div>
+              <div class="rating-value">
+                <span class="current-rating">9.8</span>
+                /
+                <span class="max-rating">10</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="rating-item">
+          <div class="rating-item-inner">
+            <div class="logo-rating">
+              <img src="assets/img/ieo/icobench.svg" alt="">
+            </div>
+            <div class="rating-text">
+              <div class="rating-title-item">
+                <span>Rating</span>
+              </div>
+              <div class="rating-value">
+                <span class="current-rating">4.9</span>
+                /
+                <span class="max-rating">5</span>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="rating-item">
+          <div class="rating-item-inner">
+            <div class="logo-rating">
+              <img src="assets/img/ieo/icotop.svg" alt="">
+            </div>
+            <div class="rating-text">
+              <div class="rating-title-item">
+                <span>Rating</span>
+              </div>
+              <div class="rating-value">
+                <span class="current-rating">A2</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="economics standart-pg">
+      <div class="economics-inner">
+        <div class="text-info-block">
+          <h4>Cerl Token sale and economics</h4>
+        </div>
+        <div class="economics-table">
+          <div class="economics-table-wr">
+            <div class="economics-table-item" *ngFor="let item of description.table">
+              <div class="table-item-description">
+                <p>{{item.name}}</p>
+              </div>
+              <div class="table-item-value">
+                <p>{{item.desc}}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="allocation standart-pg">
+      <div class="text-info-block">
+        <h4>Token Allocaation</h4>
+      </div>
+      <div class="allocation-graph" id="allocation-graph">
+        <img src="assets/img/ieo/graph1.png" alt="">
+      </div>
+    </div>
+
+    <div class="schedule standart-pg">
+      <div class="text-info-block">
+        <h4>Cerl token release schedule</h4>
+      </div>
+      <div class="schedule-graph" id="schedule-graph">
+        <img src="assets/img/ieo/graph2.png" alt="">
+      </div>
+    </div>
+
   </div>
 </div>
 
