add interactive + show ieo header + first screen in progress ieo

--- a/src/app/ieo/components/ieo-header/ieo-header.component.html
+++ b/src/app/ieo/components/ieo-header/ieo-header.component.html
@@ -16,7 +16,7 @@
 					<path d="M42 21C42 32.0236 32.8442 41 21.5 41C10.1559 41 1 32.0236 1 21C1 9.97636 10.1559 1 21.5 1C32.8442 1 42 9.97636 42 21Z" stroke="#5E5F74" stroke-width="2"/>
 				</svg>
 				<svg id="progress-bar" class="progress-bar" width="43" height="43" viewBox="0 0 43 43" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path style="stroke-dashoffset: 79;" d="M42 21C42 32.0236 32.8442 41 21.5 41C10.1559 41 1 32.0236 1 21C1 9.97636 10.1559 1 21.5 1C32.8442 1 42 9.97636 42 21Z" stroke="#237BEF" stroke-width="2"/>
+					<path style="stroke-dashoffset: calc(127 - (127 * .3311));" d="M42 21C42 32.0236 32.8442 41 21.5 41C10.1559 41 1 32.0236 1 21C1 9.97636 10.1559 1 21.5 1C32.8442 1 42 9.97636 42 21Z" stroke="#237BEF" stroke-width="2"/>
 				</svg>
 				<span>33,11%</span>
 			</div>
