--- a/src/assets/scss/pages/ieo/_ieo-info.scss
+++ b/src/assets/scss/pages/ieo/_ieo-info.scss
@@ -131,3 +131,14 @@
 	padding-top: 1.7em;
 	padding-bottom: 1.7em;
 }
+
+.allocation-graph{
+	img{
+		max-width: 100%;
+	}
+}
+.schedule-graph{
+	img{
+		max-width: 100%;
+	}
+}
