--- a/src/app/ieo/ieo.component.html
+++ b/src/app/ieo/ieo.component.html
@@ -35,18 +35,39 @@
 							</tr>
 						</table>
 						<div class="buy-block">
+
+							<!-- ieo in progress -->
+
+							<div class="progress-block">
+								<div class="currency-info">
+									<div class="currency-buyed">
+										<span class="buyed-value">11,801,455,591</span>
+										<span class="currency-name">BTT</span>
+									</div>
+									<div class="percentage">
+										<span>33,11%</span>
+									</div>
+								</div>
+								<div class="currency-bar">
+									<div class="currency-bar-progress" style="width: 33.11%"></div>		
+								</div>
+							</div>
 							<div class="amount">
 								<p>Amount: <span>597,014,925 BTT</span></p>
 							</div>
-							<div class="starts">
+
+							<!-- Before start ieo block-->
+
+
+							<!-- <div class="starts">
 								<p>Starts In:</p>
 								<div class="timer" id="timer">
 
 								</div>
 
-							</div>
+							</div> -->
 							<div class="button-part">
-								<button class="standart-btn">
+								<button class="standart-btn" disabled>
 									<span>Buy Now</span>
 								</button>
 							</div>
@@ -120,7 +141,7 @@
 						<p class="requirement-description">
 						Afghanistan,Albania,Belarus,Bosnia & Herzegovina,Burundi,Canada,Central African Republic,Cote dIvoire,Cuba,Democratic Republic of the Congo,Ethiopia,Guinea,Guinea-Bissau,Iran,Iraq,Lebanon,Liberia,Libya,Mainland China,Malaysia,Myanmar (Burma),New Zealand,North Korea,Republic of Macedonia (FYROM),Serbia,Somalia,South Sudan,Sri Lanka,Sudan,Syria,Thailand,Trinidad & Tobago,Tunisia,Uganda,Ukraine,United States of America (USA),Venezuela,Yemen,Zimbabwe</p>
 					</div>
-					<div class="requirement-status">
+					<a href="#" class="requirement-status">
 						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<circle cx="12" cy="12" r="12" fill="#EB5757"/>
 							<rect x="15.4854" y="7" width="2" height="12" rx="1" transform="rotate(45 15.4854 7)" fill="white"/>
@@ -128,19 +149,19 @@
 						</svg>
 
 						<p>Proceed to varification »</p>
-					</div>
+					</a>
 				</div>
 				<div class="requirement-item requirement-wait">
 					<div class="requirement-text">
 						<p>Based on our latest terms, all users are required to accept the Token Purchase Agreement</p>
 					</div>
-					<div class="requirement-status">
+					<a href="#" class="requirement-status">
 						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<circle cx="12" cy="12" r="12" fill="#237BEF"/>
 							<path d="M10.7344 14.6562C10.7344 13.9635 10.8203 13.4115 10.9922 13C11.1641 12.5885 11.5026 12.138 12.0078 11.6484C12.5182 11.1536 12.8411 10.8021 12.9766 10.5938C13.1849 10.276 13.2891 9.93229 13.2891 9.5625C13.2891 9.07292 13.1667 8.70052 12.9219 8.44531C12.6823 8.1849 12.3281 8.05469 11.8594 8.05469C11.4115 8.05469 11.0495 8.18229 10.7734 8.4375C10.5026 8.6875 10.3672 9.02865 10.3672 9.46094H8.46875C8.47917 8.53906 8.79167 7.8099 9.40625 7.27344C10.026 6.73698 10.8438 6.46875 11.8594 6.46875C12.9062 6.46875 13.7214 6.73438 14.3047 7.26562C14.8932 7.79688 15.1875 8.53906 15.1875 9.49219C15.1875 10.3411 14.7917 11.1771 14 12L13.0391 12.9453C12.6953 13.3359 12.5182 13.9062 12.5078 14.6562H10.7344ZM10.6016 17.0859C10.6016 16.7786 10.6979 16.5312 10.8906 16.3438C11.0833 16.151 11.3438 16.0547 11.6719 16.0547C12.0052 16.0547 12.2682 16.1536 12.4609 16.3516C12.6536 16.5443 12.75 16.7891 12.75 17.0859C12.75 17.3724 12.6562 17.612 12.4688 17.8047C12.2812 17.9974 12.0156 18.0938 11.6719 18.0938C11.3281 18.0938 11.0625 17.9974 10.875 17.8047C10.6927 17.612 10.6016 17.3724 10.6016 17.0859Z" fill="white"/>
 						</svg>
 						<p>Accept the terms of the agreement »</p>
-					</div>
+					</a>
 				</div>
 			</div>
 		</div>
