--- a/src/assets/scss/pages/ieo/_ieo-requirements.scss
+++ b/src/assets/scss/pages/ieo/_ieo-requirements.scss
@@ -57,6 +57,7 @@
 		width: 18.5em;
 		display: flex;
 		align-items: center;
+		text-decoration: none;
 		svg{
 			display: block;
 			margin-right: 7px;
