--- a/src/app/dashboard/components/market-search/market-search.component.html
+++ b/src/app/dashboard/components/market-search/market-search.component.html
@@ -25,7 +25,7 @@
         <tbody>
         <ng-container *cdkVirtualFor="let pair of showPairs">
           <tr class="table__row table__row--mob " (click)="setCurrentPair(pair)">
-            <td class="table__cell" *ngIf="isAuthenticated">
+            <td class="table__cell table__cell--start" *ngIf="isAuthenticated">
               <span
                 class="table__row-star"
                 [ngClass]="{'table__row-star--select': isFavorite(pair)}"
@@ -44,13 +44,13 @@
                 </svg>
               </span>
             </td>
-            <td class="table__cell table__cell--tal">
+            <td class="table__cell table__cell--tal table__cell--start">
               <span>{{splitPairName(pair.currencyPairName)[0]}}</span>
               <span class="txt-small txt-light-grey">/ <span>{{splitPairName(pair.currencyPairName)[1]}}</span></span>
             </td>
-            <td class="table__cell table__cell--tar">
+            <td class="table__cell table__cell--tar table__cell--end">
               <span>{{pair.lastOrderRate | roundCurrency: currency | formatCurrency }}</span>
-              <span class="txt-small txt-light-grey">/<span>$ {{+pair.priceInUsd | roundCurrency: true | formatCurrency: true}}</span></span>
+              <!--<span class="txt-small txt-light-grey">/<span>$ {{+pair.priceInUsd | roundCurrency: true | formatCurrency: true}}</span></span>-->
             </td>
           </tr>
           <tr style="height: 10px;"></tr>
