--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -12,7 +12,7 @@
         {{'Search' | translate}}
       </div>
     </div>
-    <div class="tabs widget__tabs widget__tabs--mob widget__markets-tabs">
+    <div class="tabs widget__tabs widget__tabs--mob widget__markets-tabs" *ngIf="!marketSearch">
       <button class="tabs__item  tabs__item--active"
               [ngClass]="{'tabs__item--active': currencyDisplayMode === 'BTC','tab-no-active': currencyDisplayMode !== 'BTC'}"
               (click)="selectedTab('BTC')">
