--- a/src/assets/scss/components/_market-search.scss
+++ b/src/assets/scss/components/_market-search.scss
@@ -1,6 +1,6 @@
 .market-search{
   position: relative;
-  padding: 0 12px 0;
+  padding: 0;
   /*--- modificators start ---*/
   /*--- modificators end ---*/
   /*--- elements start ---*/
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 12px 0;
     margin-top: 12px;
   }
   &__title{
@@ -23,7 +24,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 18px;
-
+    padding: 0 12px 0;
   }
   &__input{
     .wrap-input__input{
