fix embederorder virtual scroll

--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-history-mobile/embedded-orders-history-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-history-mobile/embedded-orders-history-mobile.component.html
@@ -1,5 +1,4 @@
-<cdk-virtual-scroll-viewport style="height: 227px;" itemSize="90" maxBufferPx="1">
-
+<cdk-virtual-scroll-viewport style="height: 227px;" itemSize="50">
   <table class="table table--mob">
     <thead class="table__head">
       <tr class="table__head-row">
