--- a/src/assets/scss/pages/ieo/_ieo-comunity.scss
+++ b/src/assets/scss/pages/ieo/_ieo-comunity.scss
@@ -3,8 +3,12 @@
 		display: flex;
 		align-items: center;
 		padding: 1em 20px;
-		    max-width: calc(73.7em + 40px);
-    margin: 0 auto;
+		max-width: calc(73.7em + 40px);
+		margin: 0 auto;
+		@media(max-width: 992px){
+			font-size: 1.05em;
+			justify-content: center;
+		}
 
 	}
 	.community__text{
@@ -31,6 +35,7 @@
 	}
 
 	.social-item{
+
 		&:hover{
 			svg{
 				path{
@@ -39,8 +44,10 @@
 			}
 		}
 		a{
+			height: 1em;
 			display: block;
 			svg{
+				height: 100%;
 				display: block;
 				path{
 					transition: .3s;
