--- a/src/assets/scss/pages/ieo/_ieo-info.scss
+++ b/src/assets/scss/pages/ieo/_ieo-info.scss
@@ -2,15 +2,24 @@
 	max-width: calc(73.7em + 40px);
 	margin: 0 auto;
 	padding: 1em 20px;
+	@media (max-width: 992px) {
+		font-size: 1.25em;
+	}
 	.ieo_info-wrapper{
 		background: #FFFFFF;
 		box-shadow: 0px 4px 19px rgba(0, 0, 0, 0.25);
 		border-radius: 4px;
 		color: #191A39;
 		padding: 3em;
+		@media (max-width: 992px) {
+			padding: 1.5em 1em;
+		}
 	}
 	.text-info-block{
 		margin-bottom: 1em;
+		@media (max-width: 992px) {
+			margin-bottom: 2em;
+		}
 	}
 	h4{
 		font-size: 1.8em;
@@ -19,6 +28,9 @@
 		font-weight: 500;
 		text-align: center;
 		margin-bottom: .9em;
+		@media(max-width: 992px) {
+			font-size: 1.3em;
+		}
 	}
 	p{
 
@@ -34,8 +46,7 @@
 			content: "";
 			position: absolute;
 			left: 0;
-			top: 0;
-			bottom: 0;
+			top: .45em;
 			width: 6px;
 			height: 6px;
 			border-radius: 50%;
@@ -52,8 +63,15 @@
 		margin: 0 auto;
 		padding-top: 3em;
 		padding-bottom: 3em;
+		@media(max-width: 992px){
+			padding-bottom: 0;
+			padding-top: 1em;
+		}
 		.rating-title{
 			margin-bottom: 4em;
+			@media(max-width: 992px){
+				margin-bottom: 1em;
+			}
 			h4{
 				text-align: center;
 			}
@@ -61,20 +79,32 @@
 		.rating-item-wr{
 			display: flex;
 			justify-content: space-between;
+			@media(max-width: 992px){
+				flex-direction: column;
+				align-items:center;
+				justify-content: center;
+
+			}
 		}
 		.rating-item{
 			position: relative;
-			&:first-child{
-				padding-right: 4.2em;
+			@media(max-width: 992px){
+				margin-bottom: 1.5em;
 			}
-			&:nth-child(2){
-				padding-right: 4.2em;
-				padding-left: 4.2em;
-				&::before, &::after{
-					content: "";
-					position: absolute;
-					top: 0;
-					bottom: 1em;
+			@media (min-width: 993px) {
+
+				&:first-child{
+					padding-right: 4.2em;
+
+				}
+				&:nth-child(2){
+					padding-right: 4.2em;
+					padding-left: 4.2em;
+					&::before, &::after{
+						content: "";
+						position: absolute;
+						top: 0;
+						bottom: 1em;
 					// height: 100%;
 					width: 1px;
 					background-color: #ECECEC;
@@ -92,39 +122,40 @@
 				padding-left: 4.2em;
 			}
 		}
-		.logo-rating{
-			img{
+	}
+	.logo-rating{
+		img{
 
-			}
-		}
-		.rating-text{
-
-		}
-		.rating-title-item{
-			text-align: center;
-			span{
-				font-size: .7em;
-				line-height: normal;
-				text-transform: uppercase;
-				font-variant: small-caps;
-				font-weight: 500;
-				color: #C4C4C4;
-			}
-		}
-		.rating-value{
-			font-weight: 500;
-			font-size: 1.8em;
-			text-transform: uppercase;
-			color: #C4C4C4;
-			text-align: center;
-		}
-		.current-rating{
-			
-			color: #237BEF;
-		}
-		.max-rating{
 		}
 	}
+	.rating-text{
+
+	}
+	.rating-title-item{
+		text-align: center;
+		span{
+			font-size: .7em;
+			line-height: normal;
+			text-transform: uppercase;
+			font-variant: small-caps;
+			font-weight: 500;
+			color: #C4C4C4;
+		}
+	}
+	.rating-value{
+		font-weight: 500;
+		font-size: 1.8em;
+		text-transform: uppercase;
+		color: #C4C4C4;
+		text-align: center;
+	}
+	.current-rating{
+
+		color: #237BEF;
+	}
+	.max-rating{
+	}
+}
 }
 
 .standart-pg{
