--- a/src/assets/scss/pages/ieo/_ieo-requirements.scss
+++ b/src/assets/scss/pages/ieo/_ieo-requirements.scss
@@ -3,9 +3,17 @@
 		max-width: calc(73.7em + 40px);
 		margin: 0 auto;
 		padding: 2em 20px;
+		@media(max-width: 992px){
+			font-size: 1.4em;
+			padding-top: 1em;
+		}
 	}
 	.title-part{
 		margin-bottom: 1em;
+		@media(max-width: 992px){
+			text-align: center;
+			margin-bottom: 1.5em;
+		}
 		h3{
 			font-size: 1.2em;
 		}
@@ -26,6 +34,11 @@
 		padding: 1.3em 1.6em;
 		justify-content: space-between;
 		align-items: center;
+		@media(max-width: 992px){
+			padding: .9em 1.1em;
+			flex-direction: column;
+			align-items: flex-start;
+		}
 		&:not(:last-child){
 			border-bottom: 1px solid #E5E5E5;
 		}
@@ -49,6 +62,10 @@
 		max-width: 40em;
 		margin-right: 20px;
 		width: 100%;
+		@media(max-width: 992px){
+			max-width: unset;
+			margin-bottom: .65em;
+		}
 		p{
 
 		}
