--- a/src/assets/scss/pages/ieo/_ieo_how_it_work.scss
+++ b/src/assets/scss/pages/ieo/_ieo_how_it_work.scss
@@ -1,10 +1,16 @@
 .ieo_how_it_work{
+	@media (max-width: 992px) {
+		font-size: 1.5em;
+	}
 	.ieo_how_it_work-title{
 		margin-bottom: 1.6em;
-					h3{
-						font-size: 1.2em;
-					}
-				}
+		h3{
+			font-size: 1.2em;
+			@media (max-width: 992px) {
+				text-align: center;
+			}
+		}
+	}
 	.ieo_how_it_work-wr{
 		padding: 2em 20px 4em;
 		max-width: calc(73.7em + 40px);
@@ -13,26 +19,48 @@
 	.ieo_work-item-wr{
 		display: flex;
 		justify-content: space-between;
+		@media (max-width: 992px) {
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+		}
 
 	}
 	.ieo_how_it_work-item{
+
 		&:not(:last-child){
 			width: 20%;
+			@media (max-width: 992px) {
+				width: auto;
+				margin-bottom: 2em;
+			}
 		}
 	}
 	.ieo_how_it_work-item-inner{
 		max-width: 11em;
 		position: relative;
+		@media (max-width: 992px) {
+			max-width: unset;
+		}
 		.pics-container{
 			height: 4em;
 			display: flex;
 			align-items: flex-end;
 			margin-bottom: 1.2em;
+			@media (max-width: 992px) {
+				height: auto;
+				margin-bottom: 1em;
+				justify-content: center;
+				
+			}
 			img{
 
 			}
 		}
 		.text-container{
+			@media (max-width: 992px) {
+				text-align: center;
+			}
 			h5{
 				font-size: .9em;
 				text-transform: uppercase;
@@ -51,5 +79,8 @@
 		position: absolute;
 		right: 0;
 		top: 2em;
+		@media (max-width: 992px) {
+			display: none;
+		}
 	}
 }
