--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -198,13 +198,13 @@
             <span>{{'Qubera Balance' | translate}}</span>
           </button> -->
           <button
-          [disabled]="loading$ | async"
-          class="tabs__item"
-          [ngClass]="{'tabs__item--active': currTab === Tab.ICO}"
-          (click)="onSelectTab(Tab.ICO)"
-          >
-          {{'ICO' | translate}}
-        </button>
+            [disabled]="loading$ | async"
+            class="tabs__item"
+            [ngClass]="{'tabs__item--active': currTab === Tab.ICO}"
+            (click)="onSelectTab(Tab.ICO)"
+            >
+            {{'ICO' | translate}}
+          </button>
         <button
         class="tabs__item"
         [ngClass]="{'tabs__item--active': currTab === Tab.PR}"
@@ -288,14 +288,15 @@
               (cryptoDepositOut)="goToCryptoDepositPopup($event)">
             </app-qubera-table>
           </ng-container>
-          
+
             <app-ico-table
-            [countPerPage]="countPerPage"
-            [countOfEntries]="getCountOfEntries() | async"
-            [currentPage]="currentPage"
-            [loading]="loading$ | async"
-            (onPaginate)="onPageChanged($event)"
-            *ngSwitchCase="Tab.ICO"
+              [countPerPage]="countPerPage"
+              [countOfEntries]="getCountOfEntries() | async"
+              [currentPage]="currentPage"
+              [IEOData]="IEOData"
+              [loading]="loading$ | async"
+              (onPaginate)="onPageChanged($event)"
+              *ngSwitchCase="Tab.ICO"
             ></app-ico-table>
 
 
