--- a/src/app/funds/balance/icotable/icotable.component.html
+++ b/src/app/funds/balance/icotable/icotable.component.html
@@ -14,243 +14,40 @@
   <tbody class="table__body">
     <tr
       class="table__row balance__table-row"
-      
+      *ngFor="let ieo of IEOData"
     >
       <td class="table__cell">
         <div class="balance__currency">
           <div class="balance__currency-icon">
             <img src="assets/img/currency-icons/citrus.svg">
           </div>
-          <span >Citrus</span>
+          <span >{{ieo.currencyDescription}}</span>
         </div>
       </td>
       <td class="table__cell table__cell--tar">
-        <span class="status-green">Flash Sale</span>
+        <span class="status-green">{{ieo.status}}</span>
       </td>
       <td class="table__cell table__cell--tar">
-        <span>1 CTR = 0.00043400 BTC</span>
+        <span>1 {{ieo.currencyName}} = {{ieo.rate}} BTC</span>
       </td>
       <td class="table__cell table__cell--tar">
-        <span>10345.89543217</span>
+        <span>{{ieo.availableAmount}}</span>
       </td>
       <td class="table__cell table__cell--tar">
-        <span>2019-03-19 22:00:00</span>
+        <span>{{getFormatDate(ieo.startDate)}}</span>
       </td>
       <td class="table__cell table__cell--tar">
-        <span>597,014,925 BTT</span>
+        <span>{{(ieo.availableAmount * ieo.rate ) | number: 1.1-2}} BTC</span>
       </td>
       <td class="table__cell table__cell--tar">
-        <span>597,014,925</span>
+        <span>{{ieo.amount}}</span>
       </td>
       <td class="table__cell button-cell">
-        <button class="btn btn--center btn-green btn--small btn--hidden" (click)="func()">{{'Buy' | translate}}</button>
+        <button class="btn btn--center btn-green btn--small btn--hidden" (click)="goToIeo(ieo.id)">{{'Buy' | translate}}</button>
       </td>
     </tr>
-    <tr
-      class="table__row balance__table-row"
-      
-    >
-      <td class="table__cell">
-        <div class="balance__currency">
-          <div class="balance__currency-icon">
-            <img src="assets/img/currency-icons/jido token.svg">
-          </div>
-          <span >JidoToken</span>
-        </div>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span class="status-gray">Success</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>1 JDC = 0.00043400 BTC</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>0</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>2019-03-19 22:00:00</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>597,014,925 BTT</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>597,014,925</span>
-      </td>
-      <td class="table__cell button-cell">
-        <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="func()">{{'More' | translate}}</button>
-      </td>
-    </tr>
-    <tr
-      class="table__row balance__table-row"
-      
-    >
-      <td class="table__cell">
-        <div class="balance__currency">
-          <div class="balance__currency-icon">
-            <img src="assets/img/currency-icons/bittorent.svg">
-          </div>
-          <span >BitTorent</span>
-        </div>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span class="status-gray">Upcoming</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>1 BTT = 0.00043400 BTC</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>0</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>2019-03-19 22:00:00</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>597,014,925 BTT</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>597,014,925</span>
-      </td>
-      <td class="table__cell button-cell">
-        <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="func()">{{'Participate' | translate}}</button>
-      </td>
-    </tr>
-    <tr
-      class="table__row balance__table-row"
-      
-    >
-      <td class="table__cell">
-        <div class="balance__currency">
-          <div class="balance__currency-icon">
-            <img src="assets/img/currency-icons/mana.svg">
-          </div>
-          <span >Mana</span>
-        </div>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span class="status-green">ICO fail</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>1 MNN = 0.00043400 BTC</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>124.308</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>2019-03-19 22:00:00</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>597,014,925 BTT</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>597,014,925</span>
-      </td>
-      <td class="table__cell button-cell">
-        <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="func()">{{'More' | translate}}</button>
-      </td>
-    </tr>
-    <tr
-      class="table__row balance__table-row"
-      
-    >
-      <td class="table__cell">
-        <div class="balance__currency">
-          <div class="balance__currency-icon">
-            <img src="assets/img/currency-icons/citrus.svg">
-          </div>
-          <span >Citrus</span>
-        </div>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span class="status-green">Flash Sale</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>1 CTR = 0.00043400 BTC</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>10345.89543217</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>2019-03-19 22:00:00</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>597,014,925 BTT</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>597,014,925</span>
-      </td>
-      <td class="table__cell button-cell">
-        <button class="btn btn--center btn-green btn--small btn--hidden" (click)="func()">{{'Buy' | translate}}</button>
-      </td>
-    </tr>
-    <tr
-      class="table__row balance__table-row"
-      
-    >
-      <td class="table__cell">
-        <div class="balance__currency">
-          <div class="balance__currency-icon">
-            <img src="assets/img/currency-icons/jido token.svg">
-          </div>
-          <span >JidoToken</span>
-        </div>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span class="status-gray">Success</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>1 JDC = 0.00043400 BTC</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>0</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>2019-03-19 22:00:00</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>597,014,925 BTT</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>597,014,925</span>
-      </td>
-      <td class="table__cell button-cell">
-        <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="func()">{{'More' | translate}}</button>
-      </td>
-    </tr>
-    <tr
-      class="table__row balance__table-row"
-      
-    >
-      <td class="table__cell">
-        <div class="balance__currency">
-          <div class="balance__currency-icon">
-            <img src="assets/img/currency-icons/bittorent.svg">
-          </div>
-          <span >BitTorent</span>
-        </div>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span class="status-gray">Upcoming</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>1 BTT = 0.00043400 BTC</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>0</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>2019-03-19 22:00:00</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>597,014,925 BTT</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>597,014,925</span>
-      </td>
-      <td class="table__cell button-cell">
-        <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="func()">{{'Participate' | translate}}</button>
-      </td>
-    </tr>
-    <tr class="table__row balance__table-row table__row--no-hover" *ngIf="!icoBalances.length && !loading">
+
+    <tr class="table__row balance__table-row table__row--no-hover" *ngIf="!IEOData.length">
       <td class="table__cell table__cell--tac" colspan="10">
         {{'No matching records found' | translate}}
       </td>
